# ids-python

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml
src/flametrench_ids/: __init__.py  ids.py
tests/: test_conformance.py  test_ids.py
